<resources>
    <string name="app_name">GeoConnectable</string>
    <string name="leak_canary_test_class_name">assertk.Assert</string>
    <string name="title_activity_maps">GeoConnectable</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_headers">Settings with Headers</string>
    <string name="target_visible_summ">Toggles target display at center of table</string>
    <string name="target_visible">Target visible</string>
    <string name="tilt_sensor_scale_factor">Tilt Sensor Scale Factor</string>
    <string name="spin_sensor_clicks_per_rev">Spin sensor clicks per revolution</string>
    <string name="spin_sensor_revs_per_full_zoom">Revolutions to zoom all levels</string>
    <string name="sensor_ip_address">Sensor server FQDN or IP address</string>
    <string name="sensor_tcp_port">Sensor TCP Port</string>
    <string name="include_kml_file">Include a KML file in the map display</string>
    <string name="include_kml_file_summ">Include a KML file in the map display</string>
    <string name="kml_url">http://googlemaps.github.io/kml-samples/morekml/Polygons/Polygons.Google_Campus.kml</string>
    <string name="settings_sensorSummary">Adjust sensor settings for deployed sensors</string>
    <string name="sensor_settings">Sensor configuration</string>
    <string name="UI_settings">UI configuration</string>
    <string name="settings_UISummary">Adjust colors and tweak layouts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="use_hybrid_map">Use Hybrid map</string>
    <string name="use_hybrid_map_summ">Show combined satellite and street maps</string>
    use_hybrid_map
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hotspots_list_title">Hotspots List</string>
    <string name="add_hotspot_button_label">Add New Hotspot</string>
    <string name="latitude_indicator">Latitude:  %.2f</string>
    <string name="longitude_indicator">Longitude:  %.2f</string>
    <string name="layer_indicator">Magnification:  %.2f</string>
    <string name="xtilt_indicator">Xtilt:  %.5f</string>
    <string name="ytilt_indicator">Ytilt:  %.5f</string>
    <string name="spin_indicator">spin:  %d</string>

</resources>
