<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="192.168.1.73"
        android:key="sensor_ip_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/sensor_ip_address" />
    <EditTextPreference
        android:defaultValue="5678"
        android:key="sensor_tcp_port"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/sensor_tcp_port" />
    <PreferenceScreen android:title="Hardware Gory details">
        <EditTextPreference
            android:defaultValue="256"
            android:key="spin_sensor_clicks_per_rev"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/spin_sensor_clicks_per_rev" />
        <EditTextPreference
            android:defaultValue="100"
            android:key="tilt_sensor_scale_factor"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/tilt_sensor_scale_factor" />
    </PreferenceScreen>
    <!--
    -->

</PreferenceScreen>