<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="Sensor settings">

         <android.support.v7.preference.EditTextPreference
            android:defaultValue="192.168.1.73"
            android:key="sensor_ip_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/sensor_ip_address" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="5678"
            android:key="sensor_tcp_port"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/sensor_tcp_port" />
        <android.support.v7.preference.EditTextPreference
            android:numeric="integer"
            android:key="spin_sensor_clicks_per_rev"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/spin_sensor_clicks_per_rev" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="100"
            android:numeric="integer"
            android:key="tilt_sensor_scale_factor"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/tilt_sensor_scale_factor" />
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory
        android:title="UI settings">
        <android.support.v7.preference.CheckBoxPreference
            android:key="use_hybrid_map"
            android:title="@string/use_hybrid_map"
            android:summary="@string/use_hybrid_map_summ"
            android:defaultValue="true" />
        <android.support.v7.preference.CheckBoxPreference
            android:key="target_visible"
            android:title="@string/target_visible"
            android:summary="@string/target_visible_summ"
            android:defaultValue="true" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="0xff0000"
            android:key="target_color"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Target Color" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="0.03"
            android:numeric="decimal"
            android:key="target_size"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Target Size" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="Spin table top to zoom"
            android:key="idle_text_bottom"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Idle Text Bottom" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="Tilt table top to pan"
            android:key="idle_text_top"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Idle Text Top" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="0"
            android:numeric="integer"
            android:key="horizontal_bump"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Horizontal shift" />
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="600"
            android:numeric="integer"
            android:key="idle_time"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="IDLE timeout" />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>